--- a/WebContent/main1.html
+++ b/WebContent/main1.html
@@ -369,53 +369,23 @@ button:hover {
 							<form action="">
 								<!--  General -->
 								<div class="form-group">
-									<h2 class="heading">Booking & contact</h2>
+									<h2 class="heading">렌트 상세정보</h2>
 									<div class="controls">
 										<input type="text" id="name" class="floatLabel" name="name">
-										<label for="name">Name</label>
+										<label for="name">상호명</label>
 									</div>
 									<div class="controls">
 										<input type="text" id="email" class="floatLabel" name="email">
-										<label for="email">Email</label>
+										<label for="email">이메일</label>
 									</div>
 									<div class="controls">
 										<input type="tel" id="phone" class="floatLabel" name="phone">
-										<label for="phone">Phone</label>
-									</div>
-									<div class="grid">
-										<div class="col-2-3">
-											<div class="controls">
-												<input type="text" id="street" class="floatLabel"
-													name="street"> <label for="street">Street</label>
-											</div>
-										</div>
-										<div class="col-1-3">
-											<div class="controls">
-												<input type="number" id="street-number" class="floatLabel"
-													name="street-number"> <label for="street-number">Number</label>
-											</div>
-										</div>
-									</div>
-									<div class="grid">
-										<div class="col-2-3">
-											<div class="controls">
-												<input type="text" id="city" class="floatLabel" name="city">
-												<label for="city">City</label>
-											</div>
-										</div>
-										<div class="col-1-3">
-											<div class="controls">
-												<input type="text" id="post-code" class="floatLabel"
-													name="post-code"> <label for="post-code">Post
-													Code</label>
-											</div>
-										</div>
+										<label for="phone">전화번호</label>
 									</div>
 									<div class="controls">
-										<input type="text" id="country" class="floatLabel"
-											name="country"> <label for="country">Country</label>
+										<input type="text" id="country" class="floatLabel" name="country"> 
+										<label for="country">상세주소</label>
 									</div>
-								</div>
 								<!--  Details -->
 								<div class="form-group">
 									<h2 class="heading">Details</h2>
@@ -425,7 +395,7 @@ button:hover {
 												<input type="date" id="arrive" class="floatLabel"
 													name="arrive" value="<?php echo date('Y-m-d'); ?>">
 												<label for="arrive" class="label-date"><i
-													class="fa fa-calendar"></i>&nbsp;&nbsp;Arrive</label>
+													class="fa fa-calendar"></i>&nbsp;&nbsp;대여</label>
 											</div>
 										</div>
 										<div class="col-1-4 col-1-4-sm">
@@ -433,45 +403,12 @@ button:hover {
 												<input type="date" id="depart" class="floatLabel"
 													name="depart" value="<?php echo date('Y-m-d'); ?>" /> <label
 													for="depart" class="label-date"><i
-													class="fa fa-calendar"></i>&nbsp;&nbsp;Depart</label>
+													class="fa fa-calendar"></i>&nbsp;&nbsp;반납</label>
 											</div>
 										</div>
 									</div>
 									<div class="grid">
-										<div class="col-1-3 col-1-3-sm">
-											<div class="controls">
-												<i class="fa fa-sort"></i> <select class="floatLabel">
-													<option value="blank"></option>
-													<option value="1">1</option>
-													<option value="2" selected>2</option>
-													<option value="3">3</option>
-												</select> <label for="fruit"><i class="fa fa-male"></i>&nbsp;&nbsp;People</label>
-											</div>
-										</div>
-										<div class="col-1-3 col-1-3-sm">
-											<div class="controls">
-												<i class="fa fa-sort"></i> <select class="floatLabel">
-													<option value="blank"></option>
-													<option value="deluxe" selected>With Bathroom</option>
-													<option value="Zuri-zimmer">Without Bathroom</option>
-												</select> <label for="fruit">Room</label>
-											</div>
-										</div>
-
-										<div class="col-1-3 col-1-3-sm">
-											<div class="controls">
-												<i class="fa fa-sort"></i> <select class="floatLabel">
-													<option value="blank"></option>
-													<option value="single-bed">Zweibett</option>
-													<option value="double-bed" selected>Doppelbett</option>
-												</select> <label for="fruit">Bedding</label>
-											</div>
-										</div>
-
-									</div>
-									<div class="grid">
-										<p class="info-text">Please describe your needs e.g. Extra
-											beds, children's cots</p>
+										<p class="info-text">하고싶은 말</p>
 										<br>
 										<div class="controls">
 											<textarea name="comments" class="floatLabel" id="comments"></textarea>
@@ -489,105 +426,59 @@ button:hover {
 						<!-- Schdule Day 2 -->
 						<div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
 
-							<div class="row schedule-item">
-								<div class="col-md-2">
-									<time>10:00 AM</time>
-								</div>
-								<div class="col-md-10">
-									<div class="speaker">
-										<img src="assets/img/speakers/1.jpg" alt="Brenden Legros">
+							<form action="">
+								<!--  General -->
+								<div class="form-group">
+									<h2 class="heading">렌트 상세정보</h2>
+									<div class="controls">
+										<input type="text" id="name" class="floatLabel" name="name">
+										<label for="name">상호명</label>
 									</div>
-									<h4>
-										Libero corrupti explicabo itaque. <span>Brenden Legros</span>
-									</h4>
-									<p>Facere provident incidunt quos voluptas.</p>
-								</div>
-							</div>
-
-							<div class="row schedule-item">
-								<div class="col-md-2">
-									<time>11:00 AM</time>
-								</div>
-								<div class="col-md-10">
-									<div class="speaker">
-										<img src="assets/img/speakers/2.jpg" alt="Hubert Hirthe">
+									<div class="controls">
+										<input type="text" id="email" class="floatLabel" name="email">
+										<label for="email">이메일</label>
 									</div>
-									<h4>
-										Et voluptatem iusto dicta nobis. <span>Hubert Hirthe</span>
-									</h4>
-									<p>Maiores dignissimos neque qui cum accusantium ut sit
-										sint inventore.</p>
-								</div>
-							</div>
-
-							<div class="row schedule-item">
-								<div class="col-md-2">
-									<time>12:00 AM</time>
-								</div>
-								<div class="col-md-10">
-									<div class="speaker">
-										<img src="assets/img/speakers/3.jpg" alt="Cole Emmerich">
+									<div class="controls">
+										<input type="tel" id="phone" class="floatLabel" name="phone">
+										<label for="phone">전화번호</label>
 									</div>
-									<h4>
-										Explicabo et rerum quis et ut ea. <span>Cole Emmerich</span>
-									</h4>
-									<p>Veniam accusantium laborum nihil eos eaque accusantium
-										aspernatur.</p>
-								</div>
-							</div>
-
-							<div class="row schedule-item">
-								<div class="col-md-2">
-									<time>02:00 PM</time>
-								</div>
-								<div class="col-md-10">
-									<div class="speaker">
-										<img src="assets/img/speakers/4.jpg" alt="Jack Christiansen">
+									<div class="controls">
+										<input type="text" id="country" class="floatLabel" name="country"> 
+										<label for="country">상세주소</label>
 									</div>
-									<h4>
-										Qui non qui vel amet culpa sequi. <span>Jack
-											Christiansen</span>
-									</h4>
-									<p>Nam ex distinctio voluptatem doloremque suscipit iusto.</p>
-								</div>
-							</div>
-
-							<div class="row schedule-item">
-								<div class="col-md-2">
-									<time>03:00 PM</time>
-								</div>
-								<div class="col-md-10">
-									<div class="speaker">
-										<img src="assets/img/speakers/5.jpg" alt="Alejandrin Littel">
+								<!--  Details -->
+								<div class="form-group">
+									<h2 class="heading">Details</h2>
+									<div class="grid">
+										<div class="col-1-4 col-1-4-sm">
+											<div class="controls">
+												<input type="date" id="arrive" class="floatLabel"
+													name="arrive" value="<?php echo date('Y-m-d'); ?>">
+												<label for="arrive" class="label-date"><i
+													class="fa fa-calendar"></i>&nbsp;&nbsp;대여</label>
+											</div>
+										</div>
+										<div class="col-1-4 col-1-4-sm">
+											<div class="controls">
+												<input type="date" id="depart" class="floatLabel"
+													name="depart" value="<?php echo date('Y-m-d'); ?>" /> <label
+													for="depart" class="label-date"><i
+													class="fa fa-calendar"></i>&nbsp;&nbsp;반납</label>
+											</div>
+										</div>
 									</div>
-									<h4>
-										Quos ratione neque expedita asperiores. <span>Alejandrin
-											Littel</span>
-									</h4>
-									<p>Eligendi quo eveniet est nobis et ad temporibus odio
-										quo.</p>
-								</div>
-							</div>
-
-							<div class="row schedule-item">
-								<div class="col-md-2">
-									<time>04:00 PM</time>
-								</div>
-								<div class="col-md-10">
-									<div class="speaker">
-										<img src="assets/img/speakers/6.jpg" alt="Willow Trantow">
+									<div class="grid">
+										<p class="info-text">하고싶은 말</p>
+										<br>
+										<div class="controls">
+											<textarea name="comments" class="floatLabel" id="comments"></textarea>
+											<label for="comments">Comments</label>
+										</div>
+										<button type="submit" value="Submit" class="col-1-4">Submit</button>
 									</div>
-									<h4>
-										Quo qui praesentium nesciunt <span>Willow Trantow</span>
-									</h4>
-									<p>Voluptatem et alias dolorum est aut sit enim neque
-										veritatis.</p>
 								</div>
-							</div>
-
-						</div>
-						<!-- End Schdule Day 2 -->
-					</div>
+								<!-- /.form-group -->
+							</form>
 			</div>
 		</section>
 		<!-- End Schedule Section -->
