--- a/WebContent/main1.html
+++ b/WebContent/main1.html
@@ -350,9 +350,9 @@ button:hover {
 
 				<ul class="nav nav-tabs" role="tablist" data-aos="fade-up"
 					data-aos-delay="100">
-					<li class="nav-item"><a class="nav-link active" href="#day-1"
+					<li class="nav-item" value="short"><a class="nav-link" href="#day-1"
 						role="tab" data-toggle="tab">단기렌트 신청</a></li>
-					<li class="nav-item"><a class="nav-link" href="#day-2"
+					<li class="nav-item" value="long"><a class="nav-link" href="#day-1"
 						role="tab" data-toggle="tab">장기렌트 신청</a></li>
 
 					<br>
@@ -422,64 +422,6 @@ button:hover {
 
 						</div>
 						<!-- End Schdule Day 1 -->
-
-						<!-- Schdule Day 2 -->
-						<div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
-
-							<form action="">
-								<!--  General -->
-								<div class="form-group">
-									<h2 class="heading">렌트 상세정보</h2>
-									<div class="controls">
-										<input type="text" id="name" class="floatLabel" name="name">
-										<label for="name">상호명</label>
-									</div>
-									<div class="controls">
-										<input type="text" id="email" class="floatLabel" name="email">
-										<label for="email">이메일</label>
-									</div>
-									<div class="controls">
-										<input type="tel" id="phone" class="floatLabel" name="phone">
-										<label for="phone">전화번호</label>
-									</div>
-									<div class="controls">
-										<input type="text" id="country" class="floatLabel" name="country"> 
-										<label for="country">상세주소</label>
-									</div>
-								<!--  Details -->
-								<div class="form-group">
-									<h2 class="heading">Details</h2>
-									<div class="grid">
-										<div class="col-1-4 col-1-4-sm">
-											<div class="controls">
-												<input type="date" id="arrive" class="floatLabel"
-													name="arrive" value="<?php echo date('Y-m-d'); ?>">
-												<label for="arrive" class="label-date"><i
-													class="fa fa-calendar"></i>&nbsp;&nbsp;대여</label>
-											</div>
-										</div>
-										<div class="col-1-4 col-1-4-sm">
-											<div class="controls">
-												<input type="date" id="depart" class="floatLabel"
-													name="depart" value="<?php echo date('Y-m-d'); ?>" /> <label
-													for="depart" class="label-date"><i
-													class="fa fa-calendar"></i>&nbsp;&nbsp;반납</label>
-											</div>
-										</div>
-									</div>
-									<div class="grid">
-										<p class="info-text">하고싶은 말</p>
-										<br>
-										<div class="controls">
-											<textarea name="comments" class="floatLabel" id="comments"></textarea>
-											<label for="comments">Comments</label>
-										</div>
-										<button type="submit" value="Submit" class="col-1-4">Submit</button>
-									</div>
-								</div>
-								<!-- /.form-group -->
-							</form>
-			</div>
 		</section>
 		<!-- End Schedule Section -->
 
